add validation form, scroll

--- a/cart_items.html
+++ b/cart_items.html
@@ -385,7 +385,7 @@
               </div>
               <div class="checkout__btns">
                 <a href="index.htm" class="checkout__btn button button_no-bg">Продолжить покупки</a>
-                <button type="button" class="checkout__btn button">Оформить заказ</button>
+                <button type="button" id="design-btn" class="checkout__btn button">Оформить заказ</button>
               </div>
               <div class="checkout__form">
                 <h2 class="heading checkout__heading">Оформление</h2>
@@ -393,11 +393,11 @@
                   <div class="checkout__form-row">
                     <div class="form-popup__item">
                       <label for="email" class="checkout__label">Ваш E-mail</label>
-                      <input type="text" id="email" name="email" data-required="phonemail" data-error="Введите Tel./Email" placeholder="Email" class="form__input">
+                      <input type="text" id="email" name="email" data-required="email" data-error="Введите ваш E-mail" placeholder="Email" class="form__input">
                     </div>
                     <div class="form-popup__item">
                       <label for="email" class="checkout__label">Доставка </label>
-                      <select name="form[]" data-class-modif="form">
+                      <select name="form[]" data-required data-error="Выберите способ доставки" data-class-modif="form">
                         <option value selected>Выбрать</option>
                         <option value="Самовывоз">Самовывоз</option>
                         <option value="Omniva">Доставка Omniva</option>
@@ -410,8 +410,10 @@
                     <textarea name="message" id="message" data-error="Коментарий к заказу" placeholder="Коментарий к заказу" class="form__input form__input_textarea"></textarea>
                   </div>
                   <div class="checkout__form-row">
-                    <div class="checkbox form-popup__checkbox">
-                      <div id="capcha1" data-required="capcha" data-sitekey="6LcV7cgkAAAAAC8wrAV3nwv6rFNrmfsjq8LG8oJx" data-error="Пройдите reCAPCHA" class="g-recaptcha"></div>
+                    <div class="form-popup__item">
+                      <div class="checkbox form-popup__checkbox">
+                        <div id="capcha1" data-required="capcha" data-sitekey="6Lfsl-ckAAAAAC4bZqHxJD7Pn8debRlnBrCEsKzb" data-error="Пройдите reCAPCHA" class="g-recaptcha"></div>
+                      </div>
                     </div>
                     <button class="form-popup__btn button" type="submit">Заказать</button>
                   </div>
@@ -989,6 +991,7 @@
         </div>
       </div>
     </div>
+    <script src="./assets/js/forms.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
