--- a/product/product21.html
+++ b/product/product21.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html
-  id="0"
+id="21"
   style="
     --color-btn-bg: #262626;
     --color-btn-bg-is-dark: true;
@@ -63,7 +63,11 @@
     </title>
     <meta
       name="description"
-      content=""
+      content="Купить Alan Hadash Кондиционер для окрашенных волос Brazilian MuruMuru, 200мл.
+Цена - 780 руб. Быстрая доставка.
+☎️ +7 (495) 131-8025
+Все товары  «Alan Hadash»
+"
     />
     <meta
       data-config='{"static-versioned": "1.38"}'
@@ -7682,19 +7686,7 @@
 
 
   <script>
-    // window.addEventListener("load", () => {
-    //   const btns = document.querySelectorAll('.product-form__counters-btns button');
-    //   const addCartBtn = document.querySelector('.add-cart-counter');
-    //   const addCartBtnCount =  addCartBtn.querySelector('[data-add-cart-counter-count]');
 
-
-    //   btns.forEach(btn => {
-    //     btn.addEventListener("click", e => {
-    //       addCartBtn.classList.add('is-add-cart');
-    //       addCartBtnCount.innerHTML = btn.dataset.num;
-    //     });
-    //   });
-    // });
 
   </script>
 
@@ -9623,7 +9615,7 @@
           '"'
       );
     }
-  </script> 
+  </script>
 
   <meta name="font-static-version" content="2.71" />
   <meta
