add descr to 18th vitamin, flex-start to tabs nav

--- a/index.htm
+++ b/index.htm
@@ -1023,7 +1023,7 @@
 
     .tabs-prod__navigation {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
       margin-bottom: 50px;
     }
