--- a/index.htm
+++ b/index.htm
@@ -377,7 +377,7 @@
             <div class="banner-list__item">
               <div class="banner-list__item-image">
                 <picture>
-                  <!-- <source
+                  <source
                     media="(min-width:769px)"
                     data-srcset="img/banner/1.png"
                     type="image/webp"
@@ -394,10 +394,10 @@
                     data-srcset="img/banner/1.png"
                     type="image/webp"
                     class="lazyload"
-                  /> -->
+                  />
 
                   <img
-                    src="img/banner/1.png"
+                    data-srcset="img/banner/1.png"
                     class="lazyload"
                   />
                 </picture>
@@ -866,26 +866,6 @@
       </footer>
     </div>
 
-    <!-- Yandex.Metrika counter -->
-   
-    <!-- <noscript
-      ><div>
-        <img
-          src="watch/52115380"
-          style="position: absolute; left: -9999px"
-          alt=""
-        /></div
-    ></noscript>
-    
-    <noscript
-      ><div>
-        <img
-          src="watch/52115380"
-          style="position: absolute; left: -9999px"
-          alt=""
-        /></div
-    ></noscript> -->
-    <!-- /Yandex.Metrika counter -->
   </body>
   <script src="./assets/js/products-view.js"></script>  
 
