--- a/index.htm
+++ b/index.htm
@@ -230,10 +230,10 @@
                     </form>
                     <button
                       type="button"
-                      class="header__search-btn js-show-search"
+                      class="header__search-btn js-show-search  _show _hide"
                     >
-                      <span class="icon icon-search _show"></span>
-                      <span class="icon icon-times _hide"></span>
+                      <span class="icon icon-search "></span>
+                      <span class="icon icon-times "></span>
                     </button>
                   </div>
 
